kubernetes/ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
    name: ingress
spec:
    rules:
      - host: databass.io
        http:
          paths:
            - backend:
                serviceName: vital
                servicePort: 8080
              path: /
    tls:
        - hosts:
            - databass.io
          secretName: vital-tls
